// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 hNsqVj"
    id="Template A_01"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 hRuXcc"
    id="Template B_01"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 kAFabl"
    id="Template B_02"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 espfRz"
    id="Template C_01"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 kDqWth"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 geAXAR"
    id="Template C_02"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 kDqWth"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 bmgPWR"
    id="Template D_01"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 kDqWth"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 cHLiMl"
      id="D"
      placeholder="D"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 7`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 gjlzIG"
    id="Template E_01"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 kDqWth"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 cHLiMl"
      id="D"
      placeholder="D"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eHYExx"
      id="E"
      placeholder="E"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 8`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 benDQY"
    id="Template E_02"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 kDqWth"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 cHLiMl"
      id="D"
      placeholder="D"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eHYExx"
      id="E"
      placeholder="E"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 9`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwDkn"
  id={null}
  rows="100vh"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 bxJVRa"
    id="Template E_03"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 kDqWth"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 cHLiMl"
      id="D"
      placeholder="D"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eHYExx"
      id="E"
      placeholder="E"
      tabIndex="0"
    >
      
    </section>
  </section>
</section>
`;

exports[` 10`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 dQnjXC"
    id="Template Regions"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 cZdOUl"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      <form
        className="Search__SearchContainer-sey9om-0 gehspl"
        id="Search_E3"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr Search__NewTextInput-sey9om-1 cmTSiR"
          id="Search_E3-search-bar_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 kMwpmX"
            cols=""
            disabled={false}
            id="Search_E3-search-bar"
            list={null}
            name="Search_E3-search-bar"
            onBlur={null}
            onChange={[Function]}
            onFocus={null}
            onKeyPress={[Function]}
            pattern={null}
            placeholder="Search Location"
            rows=""
            type="search"
          />
        </section>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 fcVknO Search__SearchButton-sey9om-2 cnBOie"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={[Function]}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
            id={null}
            rows={null}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
              color={null}
              data-icon="search"
              data-prefix="far"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </section>
        </button>
      </form>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eTIgqJ"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 kwSKAY"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 juLdGP Button__LabelWrapper-sc-1v7sls2-1 crITLr"
          id={null}
          rows="max-content 1fr"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
            fontSize="0.879em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Button
          </label>
        </section>
      </button>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 kDqWth"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 kwSKAY"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 juLdGP Button__LabelWrapper-sc-1v7sls2-1 crITLr"
          id={null}
          rows="max-content 1fr"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
            fontSize="0.879em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Button
          </label>
        </section>
      </button>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 cHLiMl"
      id="D"
      placeholder="D"
      tabIndex="0"
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 kwSKAY"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 juLdGP Button__LabelWrapper-sc-1v7sls2-1 crITLr"
          id={null}
          rows="max-content 1fr"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
            fontSize="0.879em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Button
          </label>
        </section>
      </button>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-1 eHYExx"
      id="E"
      placeholder="E"
      tabIndex="0"
    >
      
    </section>
  </section>
</div>
`;

exports[` 11`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 iKEKmF"
    id={null}
    rows={null}
  >
    <h4
      className="Typography__TitleText-sc-19auepv-2 diCApD"
      fontSize="1.25em"
      fontWeight={600}
      letterSpacing="0px"
    >
      My Latest Musings
    </h4>
    <p
      className="Typography__Paragraph-sc-19auepv-3 fSxzat"
      fontSize="0.879em"
      fontWeight={300}
      id={null}
      letterSpacing="0.2px"
    >
      Totally Worth The Read...Enjoy!
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 eFKeiu"
      fontSize="0.75em"
      fontWeight={600}
      id={null}
      letterSpacing="0.4px"
    >
      Just think about these things in your mind - then bring them into your world. Isn't that fantastic? You can just push a little tree out of your brush like that. Look around, look at what we have. Beauty is everywhere, you only have to look to see it. I thought today we would make a happy little stream that's just running through the woods here. Just a little indication.
    </p>
    <h5
      className="Typography__TitleText-sc-19auepv-2 PRpBC"
      fontSize="1.15em"
      fontWeight={400}
      letterSpacing="0px"
    >
      Section 1
    </h5>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iHWhme"
      fontSize="0.879em"
      fontWeight={400}
      id={null}
      letterSpacing="0.2px"
    >
      This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iHWhme"
      fontSize="0.879em"
      fontWeight={400}
      id={null}
      letterSpacing="0.2px"
    >
      This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
    </p>
    <h5
      className="Typography__TitleText-sc-19auepv-2 PRpBC"
      fontSize="1.15em"
      fontWeight={400}
      letterSpacing="0px"
    >
      Section 2
    </h5>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iHWhme"
      fontSize="0.879em"
      fontWeight={400}
      id={null}
      letterSpacing="0.2px"
    >
      This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iHWhme"
      fontSize="0.879em"
      fontWeight={400}
      id={null}
      letterSpacing="0.2px"
    >
      This is probably the greatest thing to happen in my life - to be able to share this with you.  Here's something that's fun. Talk to trees, look at the birds. Whatever it takes. It's so important to do something every day that will make you happy.
    </p>
  </section>
</div>
`;

exports[` 12`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-0 iKEKmF"
    id="Knobs"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-1 dUfoBw"
      id="A"
      placeholder="A"
      tabIndex="0"
    />
    <section
      className="Template__Region-sc-1i4nzbu-1 jLgFdL"
      id="B"
      placeholder="B"
      tabIndex="0"
    />
    <section
      className="Template__Region-sc-1i4nzbu-1 iuTVwi"
      id="C"
      placeholder="C"
      tabIndex="0"
    />
    <section
      className="Template__Region-sc-1i4nzbu-1 gJWEAp"
      id="D"
      placeholder="D"
      tabIndex="0"
    />
    <section
      className="Template__Region-sc-1i4nzbu-1 fswyCg"
      id="E"
      placeholder="E"
      tabIndex="0"
    />
  </section>
</div>
`;
